--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "bower": "^1.7.7",
     "browser-sync": "^2.11.2",
     "gulp": "^3.9.1",
-    "gulp-ruby-sass": "^2.0.6"
+    "gulp-bower": "0.0.13",
+    "gulp-clean": "^0.3.2",
+    "gulp-debug": "^2.1.2",
+    "gulp-inject": "^4.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3"
   }
 }
