--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^2.0.4",
     "gulp-debug": "^2.1.2",
     "gulp-inject": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
