--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "jquery": "^2.2.2",
     "angular": "^1.5.3",
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "angular-ui-router": "^0.2.18"
   }
 }
