--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,10 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^2.2.2",
-    "angular": "^1.5.3",
+    "jquery": "^2.2.4",
+    "angular": "^1.5.7",
     "bootstrap-sass": "^3.3.6",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-loading-bar": "^0.9.0"
   }
 }
