--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "browser-sync": "^2.11.2",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-clean": "^0.3.2",
@@ -23,7 +24,10 @@
     "gulp-debug": "^2.1.2",
     "gulp-inject": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "gulp-webserver": "^0.9.1",
+    "require-dir": "^0.3.0"
   }
 }
