--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.4",
     "gulp-debug": "^2.1.2",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-inject": "^4.0.0",
-    "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^1.5.4",
     "gulp-webserver": "^0.9.1",
+    "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0"
   }
 }
